Updates to checks cashed

--- a/pages/ChecksCashed.html
+++ b/pages/ChecksCashed.html
@@ -40,7 +40,7 @@
            class="win-selectionstylefilled"
            data-win-control="WinJS.UI.ListView"
            data-win-options="{
-                  itemDataSource: checks,
+                  itemDataSource: CheckData.ListView.data,
                   itemTemplate: select('.smallListIconTextTemplate'),
                   header: select('.header'),
                   itemsReorderable: true,
