Fragment loading test

--- a/index.html
+++ b/index.html
@@ -27,4 +27,7 @@
             <div class="contenttext"><h2>SplitView Content area</h2> </div>
         </div> 
     </div>
+    <div id="accountBalanceFragment"></div>
+    <div id="checksCashedFragment"></div>
+    <div id="billPayFragment"></div>
 </body>
