--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <div class="splitView" data-win-control="WinJS.UI.SplitView">
+        <div class="splitView" data-win-control="WinJS.UI.SplitView" id="rootSplitView">
             <!-- Pane area -->
             <div>
                 <div class="header">
