--- a/pages/ChecksCashed.html
+++ b/pages/ChecksCashed.html
@@ -27,17 +27,24 @@
       
       <div class="headerFooterPlaceholder">
         <div class="header">
-            <div class="smallListIconTextItem-Detail">
+            <div class="smallListIconTextItem">
+              <div class="smallListIconTextItem-Detail">
                 <h4>Check Number</h4>
+              </div>
+              <div class="smallListIconTextItem-Detail">
                 <h4>Amount</h4>
+              </div>
+              <div class="smallListIconTextItem-Detail">
                 <h4>Date</h4>
+              </div>
+              <div class="smallListIconTextItem-Detail">
                 <h4>Photo</h4>
+              </div>
             </div>
         </div>
     </div>
       
-      <div id="listView"
-           class="win-selectionstylefilled"
+      <div class="listView win-selectionstylefilled"
            data-win-control="WinJS.UI.ListView"
            data-win-options="{
                   itemDataSource: CheckData.ListView.data.dataSource,
