--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div>
                 <div class="header">
                     <div class="win-splitview-button" style="background-image: url('images/hamburgerDark.png')" onclick="togglePane()"></div>
-                    <div class="title">SplitView Pane area</div>
+                    <div class="title">Contoso Banking</div>
                 </div>
 
                 <div class="nav-commands">
