Checks data event handler

--- a/pages/ChecksCashed.html
+++ b/pages/ChecksCashed.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div>
-    <div id="checkFlyout" data-win-control="WinJS.UI.Flyout" aria-label="{Check flyout}">
-        <h4>Flyout!!</h4>
+    <div id="checkFlyout" class="checkFlyout" data-win-control="WinJS.UI.Flyout" aria-label="{Check flyout}">
+        <img id="checkFlyoutImg" src="#" class="checkFlyout-Image"/>
     </div>
 
       <div class="smallListIconTextTemplate" data-win-control="WinJS.Binding.Template" style="display: none">
